--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zetamac",
   "version": "0.1.0",
+  "homepage": "https://imcoolthanks.github.io/zetamac",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.4",
@@ -15,6 +16,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "emotion-theming": "^10.0.27",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
